--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="blue_200">#8696FC</color>
+    <color name="blue_100">#315EA1</color>
     <color name="blue_500">#0028EE</color>
     <color name="blue_700">#0018B3</color>
     <color name="teal_200">#FF03DAC5</color>
